[gd_scene load_steps=3 format=3 uid="uid://b7dd1d51wqcrh"]

[ext_resource type="Script" uid="uid://ceti2a21lk3i" path="res://scripts/autoloads/continent.gd" id="1_wajck"]

[sub_resource type="Theme" id="Theme_wajck"]
default_font_size = 21

[node name="Continent" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wajck")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_wajck")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 81.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AttentionBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_pressed"]
